Fixed buttons to be aligned at bottom of cards for home page and index page

--- a/app/assets/stylesheets/components/_card_home.scss
+++ b/app/assets/stylesheets/components/_card_home.scss
@@ -31,11 +31,11 @@
   margin-bottom: 0px;
 }
 
-.test {
-  display: flex;
-  flex-direction: column;
+// .test {
+//   display: flex;
+//   flex-direction: column;
 
-  .test-button {
-    margin-top: auto;
-  }
-}
+//   .test-button {
+//     margin-top: auto;
+//   }
+// }
